Them form nhan vien

--- a/LTW2024/LTW2024.csproj
+++ b/LTW2024/LTW2024.csproj
@@ -169,5 +169,14 @@
   <ItemGroup>
     <None Include="Assets\logout.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\group.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\sync.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\magnifying-glass.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
