--- a/LTW2024/LTW2024.csproj
+++ b/LTW2024/LTW2024.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBCurrentLogin.cs" />
     <Compile Include="DBGroceryContext.cs" />
     <Compile Include="Entities\ChiTietHD.cs" />
     <Compile Include="Entities\ChiTietPhieuNhap.cs" />
